css/index.css
header.masthead {
  position: relative;
  background-size: cover;
  padding-top: 5rem;
  padding-bottom: 5rem;
  background-color: #F1f1F2;
}

.title-container {
  text-align: center;
  margin: 0 auto;
}

.title-text{
  text-align: center;
  display: inline-block;
  margin: auto;
  vertical-align: middle;
}

.vcpkg-title{
  font-size: 72px;
  color: #014380;
}
.logo-img{
  max-width: 40%;
  height: auto;
  display: inline-block;
}

.title-buttons{
  padding-top: 20px;
}

.search-bar{
  padding: 40px 20px 0px 20px;
  text-align: center;
  border: 0;
}

.search-box {
  border-radius: 1.6rem;
  border: 0;
  outline: 0;
  background: rgba(142, 142, 147, 0.12);
  padding: 5px 10px;
  width: 75%;
}

.questions{
  color: #014380;
  text-align: center;
  padding-top: 116px;
}

.questions2{
  color:#4970AA;
  text-align: center;
  padding-top: 20px;
  margin-bottom: 60px;
}

.examples{
  font-size:20px;
  background-color: #4970AA;
  color: white;
  text-align: center;
}

.what-is{
  margin-left: 15%;
  margin-right: 15%;
  font-size: 20px;
  padding-top: 24px;
  padding-bottom: 96px;
}

.blank-space{
  border:none;
}

.border-custom{
  padding: 0;
  border: 1px solid #4970AA;
}

.why-us-row{
  justify-content: center;
}
.why-us-text{
  text-align: center;
  font-size: 20px;  
}

.stay{
  margin-bottom: 30px;
  text-align: center;
}

.margins{
  margin-left: 5px;
  margin-right: 5px;
}

.margins2{
  margin-left: 5px;
  margin-right:5px;
  margin-top: 50px;
  margin-bottom: 130px;
}

.padding{
  padding: 15px;
}

.col-container{
  display:table;
  width:100%;
}

.col {
  display: table-cell; 
}

img.nav-icon {
  max-width: 20px;
  height: auto;
}

img.nav-icon:hover {
  text-decoration: none;
}

h1 {
  color: #4970AA;
}

p {
  color: Black;
}

.vc-btn{
  background-color: #4970AA;
  color: white;
  border-radius: 6px;
  text-align: center;
  vertical-align:middle;
  border: none;
  margin:5px;
  padding:10px;
  width: 100%;
}


.button:hover{
  background-color: #0066ff;
  text-decoration: underline;
}

.media-link-item{
  list-style-type: none;
  display: inline-block;
  margin-left: 2.7vw;
  margin-right: 2.7vw;
}

.media-link-img {
  max-width: 5vw;
  height: auto;
}

